--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,86 @@
+body{
+    background-image: radial-gradient(circle, #aa0000, #420000);
+}
+
 .board{
-    border: solid black 1px;
+    
     padding: 0px;
     margin: 150px auto;
     height: 302.5px;
     width: 302.5px;
     position: relative;
+    box-shadow: 5px 5px black;
 }
 
 .hline{
+    background-color: #fff;
     border-bottom: solid black 1px;
-    padding: 0px;
-    margin: 0px;
-}
-
-.vline{
-    border-right: solid black 1px;
-    height: 26.5px;
-    width: 27.5px;
     padding: 0px;
     margin: 0px;
     z-index: -1;
 }
 
+.vline{
+    background-color: #fff;
+    border-right: solid black 1px;
+    height: 26.5px;
+    width: 27.5px;
+    padding: 0px;
+    margin: 0px;
+}
+
 .home{
     margin: 0px;
     padding: 0px;
-    height: 109px;
-    width: 109px;
+    height: 110px;
+    width: 110px;
     position: absolute;
 }
 
 .blue{
-    background-color: blue;
-    bottom: 0;
-    left: 0;
+    background-color:#0099ff;
+    bottom: 0px;
+    left: 0px;
     position: absolute;
 }
 
 .yellow{
     background-color: yellow;
-    bottom: 0;
-    right: 0;
+    bottom: 0px;
+    right: 0px;
     position: absolute;
 }
 
 .red{
     background-color: red;
-    top: 0;
-    right: 0;
+    top: 0px;
+    right: 0px;
     position: absolute;
 }
 
 .green{
     background-color: green;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     position: absolute;
 }
+
+.greenhome {
+    background-color: green;
+}
+
+.redhome {
+    background-color: red;
+}
+
+.bluehome {
+    background-color: #0099ff;
+}
+
+.yellowhome {
+    background-color: yellow;
+}
+
 .token-home-wrapper{
     width:  100%;
     height: 100%;
