--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@ body{
 }
 
 .board{
-    
+    border-right: solid black 1px;
     padding: 0px;
     margin: 150px auto;
-    height: 302.5px;
-    width: 302.5px;
+    height: 325px;
+    width: 325px;
     position: relative;
     box-shadow: 5px 5px black;
 }
@@ -15,25 +15,25 @@ body{
 .hline{
     background-color: #fff;
     border-bottom: solid black 1px;
-    padding: 0px;
-    margin: 0px;
+    padding: 0px !important;
+    margin: 0px !important;
+    height: 25px;
     z-index: -1;
 }
 
 .vline{
     background-color: #fff;
     border-right: solid black 1px;
-    height: 26.5px;
-    width: 27.5px;
-    padding: 0px;
-    margin: 0px;
+    width: 25px;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
 .home{
-    margin: 0px;
-    padding: 0px;
-    height: 110px;
-    width: 110px;
+    margin: 0px !important;
+    padding: 0px !important;
+    height: 125px;
+    width: 125px;
     position: absolute;
 }
 
@@ -79,6 +79,10 @@ body{
 
 .yellowhome {
     background-color: yellow;
+}
+
+.safespace {
+    background-color: #9e9e9e;
 }
 
 .token-home-wrapper{
