Blue Token image added, reduced home-boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,8 @@ body{
 .home{
     margin: 0px !important;
     padding: 0px !important;
-    height: 125px;
-    width: 125px;
+    height: 124px;
+    width: 124px;
     position: absolute;
 }
 
@@ -97,4 +97,14 @@ body{
     height: 12.5%;
     width: 12.5%;
     border-radius: 100%;
+}
+
+#blueToken{
+    background: url("../images/blueToken.png") no-repeat;
+    height: 100px !important;
+    width: 100px !important;
+    top: 100px;
+    left: 100px;
+    z-index: 1;
+    position: absolute;
 }
