--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,14 +39,14 @@ body{
 
 .blue{
     background-color:#0099ff;
-    bottom: 0px;
+    bottom: 1px;
     left: 0px;
     position: absolute;
 }
 
 .yellow{
     background-color: yellow;
-    bottom: 0px;
+    bottom: 1px;
     right: 0px;
     position: absolute;
 }
@@ -99,12 +99,33 @@ body{
     border-radius: 100%;
 }
 
-#blueToken{
-    background: url("../images/blueToken.png") no-repeat;
-    height: 100px !important;
-    width: 100px !important;
-    top: 100px;
-    left: 100px;
+#blueTokenOne{
+    background: url("../images/blueToken.svg") no-repeat;
+    height: 12px;
+    width: 12px;
+    top: 175px;
+    left: 55px;
+    z-index: 1;
+    position: absolute;
+}
+
+
+#blueTokenTwo{
+    background: url("../images/blueToken.svg") no-repeat;
+    height: 12px;
+    width: 12px;
+    top: 185px;
+    left: 55px;
+    z-index: 1;
+    position: absolute;
+}
+
+#blueTokenThree{
+    background: url("../images/blueToken.svg") no-repeat;
+    height: 12px;
+    width: 12px;
+    top: 180px;
+    left: 80px;
     z-index: 1;
     position: absolute;
 }
