Added new bluetoken style, winner dice activated after first round, token move function called after dice is cliked tested

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,29 +113,38 @@ body{
     border-radius: 100%;
 }
 
-#Token{
-    background-color: blueviolet;
-    margin: 0px;
-    padding: 0px;
-    border: solid 1px;
+#blueTokenOne{
     height: 12px;
     width: 12px;
     font-size: 8px;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
+    top: 226px;
+    left: 25px;
     position: absolute;
+    z-index: 1;
 }
 
-#blueTokenOne{
-    background: url("../images/blueToken.svg") no-repeat;
+#tokenwrapper{
     height: 12px;
     width: 12px;
-    top: 0px;
-    left: 0px;
-    z-index: -1;
-    position: absolute;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color: rgb(0, 0, 200);
 }
+
+#tokenblue{
+    left: 25%;
+    top: 25%;
+    height: 50%;
+    width: 50%;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color: blue;
+    position: relative;
+}
+
+
 
 
 #blueTokenTwo{
