--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,37 @@ body{
     z-index: 1;
 }
 
-#tokenwrapper{
+#blueTokenTwo{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 226px;
+    left: 86.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+#blueTokenThree{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 290px;
+    left: 25px;
+    position: absolute;
+    z-index: 1;
+}
+
+#blueTokenFour{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 290px;
+    left: 86.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tokenwrapper{
     height: 12px;
     width: 12px;
     margin: 0px;
@@ -132,7 +162,7 @@ body{
     background-color: rgb(0, 0, 200);
 }
 
-#tokenblue{
+.tokenblue{
     left: 25%;
     top: 25%;
     height: 50%;
@@ -142,29 +172,6 @@ body{
     border-radius: 100%;
     background-color: blue;
     position: relative;
-}
-
-
-
-
-#blueTokenTwo{
-    background: url("../images/blueToken.svg") no-repeat;
-    height: 37px;
-    width: 37px;
-    top: 185px;
-    left: 55px;
-    z-index: 1;
-    position: absolute;
-}
-
-#blueTokenThree{
-    background: url("../images/blueToken.svg") no-repeat;
-    height: 12px;
-    width: 12px;
-    top: 180px;
-    left: 80px;
-    z-index: 1;
-    position: absolute;
 }
 
 
