--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ body{
     z-index: 1;
 }
 
-.tokenwrapper{
+.tokenwrapperblue{
     height: 12px;
     width: 12px;
     margin: 0px;
@@ -184,6 +184,188 @@ body{
     position: relative;
 }
 
+#yellowTokenOne{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 226px;
+    left: 225px;
+    position: absolute;
+    z-index: 1;
+}
+
+#yellowTokenTwo{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 226px;
+    left: 286.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+#yellowTokenThree{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 290px;
+    left: 225px;
+    position: absolute;
+    z-index: 1;
+}
+
+#yellowTokenFour{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 290px;
+    left: 286.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tokenwrapperyellow{
+    height: 12px;
+    width: 12px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color: rgb(160, 160, 0);
+}
+
+.tokenyellow{
+    left: 25%;
+    top: 25%;
+    height: 50%;
+    width: 50%;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color:  rgb(200, 200, 0);;
+    position: relative;
+}
+
+#redTokenOne{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 26px;
+    left: 225px;
+    position: absolute;
+    z-index: 1;
+}
+
+#redTokenTwo{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 26px;
+    left: 286.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+#redTokenThree{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 90px;
+    left: 225px;
+    position: absolute;
+    z-index: 1;
+}
+
+#redTokenFour{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 90px;
+    left: 286.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tokenwrapperred{
+    height: 12px;
+    width: 12px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color: rgb(160, 0, 0);
+}
+
+.tokenred{
+    left: 25%;
+    top: 25%;
+    height: 50%;
+    width: 50%;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color:  rgb(200, 0, 0);;
+    position: relative;
+}
+
+#greenTokenOne{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 26px;
+    left: 25px;
+    position: absolute;
+    z-index: 1;
+}
+
+#greenTokenTwo{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 26px;
+    left: 86.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+#greenTokenThree{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 90px;
+    left: 25px;
+    position: absolute;
+    z-index: 1;
+}
+
+#greenTokenFour{
+    height: 12px;
+    width: 12px;
+    font-size: 8px;
+    top: 90px;
+    left: 86.8px;
+    position: absolute;
+    z-index: 1;
+}
+
+.tokenwrappergreen{
+    height: 12px;
+    width: 12px;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color: rgb(0, 160, 0);
+}
+
+.tokengreen{
+    left: 25%;
+    top: 25%;
+    height: 50%;
+    width: 50%;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 100%;
+    background-color:  rgb(0, 200, 0);;
+    position: relative;
+}
 
 #bluedice{
     border: solid black 1px;
