Added logo div and action buttons to start div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,15 +25,44 @@ body{
 }
 
 #start{
-    border-right: solid black 1px;
+    border: solid black 3px;
     background-color: white;
+    border-radius: 5px;
     padding: 0px;
-    margin: 0px;
-    height: 325px;
-    width: 325px;
+    margin: 10px;
+    height: 300px;
+    width: 225px;
+    left: 50px;
     position: absolute;
     z-index: 3;
     text-align: center;
+}
+
+.settings{
+    left: 10px;
+    top: 10px;
+    width: 25px;
+    position: absolute;
+}
+
+.exit{
+    right: 10px;
+    top: 10px;
+    width: 25px;
+    position: absolute;
+}
+
+.logo{
+    border: solid black 1px;
+    height: 30%;
+    width: 50%;
+    margin: 15% auto;
+}
+
+.initbtn{
+    height: 10%;
+    width: 50%;
+    margin: 5% auto;
 }
 
 .hline{
