Changed function whostarts activation => button play

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ body{
     background-image: radial-gradient(circle, #aa0000, #420000);
 }
 
+
 #layer{
-    border: solid black 1px;
     padding: 0px;
     margin: -50px 0px;
     height: 425px;
@@ -11,13 +11,14 @@ body{
     position: absolute;
     z-index: 2;
     text-align: center;
+    
 }
 
 
 .board{
     border-right: solid black 1px;
     padding: 0px;
-    margin: 150px auto;
+    margin: -450px auto;
     height: 325px;
     width: 325px;
     position: relative;
@@ -29,11 +30,10 @@ body{
     background-color: white;
     border-radius: 5px;
     padding: 0px;
-    margin: 10px;
+    margin: 150px auto;
     height: 300px;
     width: 225px;
-    left: 50px;
-    position: absolute;
+    position: relative;
     z-index: 3;
     text-align: center;
 }
