--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,33 +472,37 @@ body{
 #dicewrapper{
     border: solid black 1px;
     margin: 0px;
-    padding: 0px;
-    width: 54.5px;
-    height: 27px;
+    padding: 2px;
+    /*width: 54.5px;*/
+    /*height: 27px;*/
     top: 180px;
     left: 80px;
     position: absolute;
     z-index: -1;
+    display: flex;
+    justify-content: space-between;
 }
 
 #dicemoveone{
-    margin: 1px 0.5px;
-    padding: 0px;
-    height: 23px;
-    width: 23px;
+    margin: 1px;
+    padding: 1px;
+    height: 25px;
+    width: 25px;
     position: relative;
     border: solid black 1px;
     display: inline-block;
+    font-size: 15px;
 }
 
 #dicemovetwo{
-    margin: 1px 0.5px;
-    padding: 0px;
-    height: 23px;
-    width: 23px;
+    margin: 1px;
+    padding: 1px;
+    height: 25px;
+    width: 25px;
     position: relative;
     border: solid black 1px;
     display: inline-block;
+    font-size: 15px;
 }
 
 #dicewrapper p{
