--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ body{
     border-right: solid black 1px;
     padding: 0px;
     margin: -450px auto;
+    /* margin: -300px auto; Margin for desktop
+    zoom: 150% zoom for desktop*/
     height: 325px;
     width: 325px;
     position: relative;
@@ -218,6 +220,8 @@ body{
     border-radius: 100%;
     background-color: blue;
     position: relative;
+    font-size: 5px;
+    color: #fff;
 }
 
 #yellowTokenOne{
@@ -283,6 +287,8 @@ body{
     border-radius: 100%;
     background-color:  rgb(200, 200, 0);;
     position: relative;
+    font-size: 5px;
+    color: #fff;
 }
 
 #redTokenOne{
@@ -348,6 +354,8 @@ body{
     border-radius: 100%;
     background-color:  rgb(200, 0, 0);;
     position: relative;
+    font-size: 5px;
+    color: #fff;
 }
 
 #greenTokenOne{
@@ -404,14 +412,13 @@ body{
     position: absolute;
     animation: zoom 1s;
     animation-iteration-count: infinite;
-    border: solid 1px;
     z-index: -1;
     background-color: inherit;
 }
 
 @keyframes zoom {
   from {width: 100%;height: 100%;margin-top:-100%;margin-left:inherit;}
-  to {width: 400%;height: 400%;margin-top:-250%;margin-left:-150%;}
+  to {width: 400%;height: 400%;margin-top:-275%;margin-left:-150%;}
 }
 
 .tokenwrappergreen{
@@ -433,6 +440,8 @@ body{
     border-radius: 100%;
     background-color:  rgb(0, 200, 0);;
     position: relative;
+    font-size: 5px;
+    color: #fff;
 }
 
 #bluedice{
