--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,14 @@
-body{
-    background-image: radial-gradient(circle, #aa0000, #420000);
-}
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy:100,200,300,400,500,600,700|Acme:100,200,300,400,500,600,700');
 
+
+body{
+    background: url("../images/coverPicture.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: "Acme";
+    color: rgba(109, 0, 73);
+}
 
 #layer{
     padding: 0px;
@@ -11,7 +18,6 @@ body{
     position: absolute;
     z-index: 2;
     text-align: center;
-    
 }
 
 .mainlayer{
@@ -21,7 +27,7 @@ body{
 .board{
     border-right: solid black 1px;
     padding: 0px;
-    margin: -450px auto;
+    margin: 150px auto 200px;
     /* margin: -300px auto; Margin for desktop
     zoom: 150% zoom for desktop*/
     height: 325px;
@@ -31,17 +37,37 @@ body{
 }
 
 #start{
-    border: solid black 3px;
-    background-color: white;
-    border-radius: 5px;
+    border: solid 3px rgba(109, 0, 73);
+    background-color:  rgb(177, 100, 121);
+    border-radius: 50px;
     padding: 0px;
-    margin: 150px auto;
-    height: 300px;
-    width: 225px;
+    margin: 150px auto 200px;
+    height: 350px;
+    width: 250px;
     position: relative;
     z-index: 3;
     text-align: center;
 }
+
+#players{
+    border: solid 3px rgba(109, 0, 73);
+    background-color:  rgb(177, 100, 121);
+    border-radius: 50px;
+    padding: 0px;
+    margin: 150px auto 200px;
+    height: 350px;
+    width: 250px;
+    position: relative;
+    z-index: 3;
+    text-align: center;
+}
+
+.playersnumber{
+    background-color:  rgba(109, 0, 73);
+    color: rgb(177, 100, 121);
+    border-radius: 100%;
+}
+
 
 .settings{
     left: 10px;
@@ -58,16 +84,44 @@ body{
 }
 
 .logo{
-    border: solid black 1px;
     height: 30%;
     width: 50%;
     margin: 15% auto;
+    font-family: 'Luckiest Guy';
 }
 
+.g{
+    color: blue;
+}
+.a{
+    color: yellow;
+}
+.m{
+    color: red;
+}
+.e{
+    color: green;
+}
 .initbtn{
+    border: solid 3px rgba(109, 0, 73);
+    background-color:  rgb(177, 100, 121);
+    border-radius: 50px;
     height: 10%;
     width: 50%;
     margin: 5% auto;
+    color: rgba(109, 0, 73);
+}
+
+.initbtn:hover, .initbtn:active {
+    border: solid rgb(177, 100, 121);
+    background-color:  rgba(109, 0, 73);
+    color: rgb(177, 100, 121);
+}
+#myCheck:hover,#myChecktwo:hover{
+    border: solid rgb(177, 100, 121);
+    background-color:  rgba(109, 0, 73);
+    color: rgb(177, 100, 121);
+    border-radius: 100%;
 }
 
 .hline{
@@ -142,6 +196,13 @@ body{
 
 .safespace {
     background-color: #9e9e9e;
+    text-align: center;
+
+}
+
+.fa-star-o, .fa-trophy{
+    font-size: 12px !important;
+    padding-top: 6px !important;
 }
 
 .token-home-wrapper{
