--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background: url("../images/coverPicture.jpg");
+    background-color:  rgb(177, 25, 121);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
