--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-color:  rgb(177, 25, 121);
+    background-color:  rgb(177, 150, 121);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -70,24 +70,22 @@ body{
 
 
 .settings{
-    left: 10px;
-    top: 10px;
+    left: 20px;
+    top: 20px;
     width: 25px;
     position: absolute;
 }
 
 .exit{
-    right: 10px;
-    top: 10px;
+    right: 20px;
+    top: 20px;
     width: 25px;
     position: absolute;
 }
 
 .logo{
-    height: 30%;
-    width: 50%;
-    margin: 15% auto;
     font-family: 'Luckiest Guy';
+    text-shadow: 3px 3px rgba(109, 0, 73);
 }
 
 .g{
@@ -123,6 +121,11 @@ body{
     color: rgb(177, 100, 121);
     border-radius: 100%;
 }
+
+.pointer:hover{
+    cursor: pointer;
+}
+
 
 .hline{
     background-color: #fff;
