--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,13 +519,13 @@ body{
     border-radius: 10%;
 }
 
-#bluedice{
+#dice0{
     position: absolute;
     margin-top: 10px;
     margin-left: 20px;
 }
 
-#bluediceone, #bluedicetwo{
+#diceone0, #dicetwo0{
     margin: 0px 2px;
     height: 40px;
     width: 40px;
@@ -533,13 +533,13 @@ body{
     text-align: center;
 }
 
-#yellowdice{
+#dice1{
     position: absolute;
     margin-top: 10px;
     right: 20px;
 }
 
-#yellowdiceone, #yellowdicetwo{
+#diceone1, #dicetwo1{
     margin: 0px 2px;
     height: 40px;
     width: 40px;
@@ -547,13 +547,13 @@ body{
     text-align: center;
 }
 
-#reddice{
+#dice2{
     position: absolute;
     top: -60px;
     right: 20px;
 }
 
-#reddiceone, #reddicetwo{
+#diceone2, #dicetwo2{
     margin: 0px 2px;
     height: 40px;
     width: 40px;
@@ -561,13 +561,13 @@ body{
     text-align: center;
 }
 
-#greendice{
+#dice3{
     position: absolute;
     top: -60px;
     left: 20px;
 }
 
-#greendiceone, #greendicetwo{
+#diceone3, #dicetwo3{
     margin: 0px 2px;
     height: 40px;
     width: 40px;
