Add function to activate and show dice options for each token before moving when tokens are clicked on

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ body{
     text-align: center;
 }
 
-.tokenwrapperblue{
+.tokenwrapper0{
     height: 12px;
     width: 12px;
     margin: 0px;
@@ -332,7 +332,7 @@ body{
     text-align: center;
 }
 
-.tokenwrapperyellow{
+.tokenwrapper1{
     height: 12px;
     width: 12px;
     margin: 0px;
@@ -399,7 +399,7 @@ body{
     text-align: center;
 }
 
-.tokenwrapperred{
+.tokenwrapper2{
     height: 12px;
     width: 12px;
     margin: 0px;
@@ -485,7 +485,7 @@ body{
   to {width: 400%;height: 400%;margin-top:-275%;margin-left:-150%;}
 }
 
-.tokenwrappergreen{
+.tokenwrapper3{
     height: 12px;
     width: 12px;
     margin: 0px;
